zlib and test compresed

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "luxon": "^3.5.0",
     "mysql2": "^3.14.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "zlib": "^1.0.5"
   }
 }
